Some progress on paste binouse

--- a/www/tpl/footer.html
+++ b/www/tpl/footer.html
@@ -1,2 +1,6 @@
 <hr/>
-footer
+<div class="footer">
+  <a href="http://www.gnu.org/licenses/agpl.html">
+    <img src="/data/agplv3-88x31.png"/>
+  </a>
+</div>
