--- a/www/tpl/header.html
+++ b/www/tpl/header.html
@@ -1,7 +1,14 @@
-<div id="header">
-  <div id="logo"><a href="/">Paste Binouse</a></div>
-  <div id="menu">
-    <a href="/">new paste</a>
-  </div>
-</div>
-<hr/>
+<pre class="title-pre">
+     __________                  __              
+     \______   \_____    _______/  |_  ____      
+      |     ___/\__  \  /  ___/\   __\/ __ \     
+      |    |     / __ \_\___ \  |  | \  ___/     
+      |____|    (____  /____  > |__|  \___  >    
+                     \/     \/            \/     
+ __________.__                                   
+ \______   \__| ____   ____  __ __  ______ ____  
+  |    |  _/  |/    \ /  _ \|  |  \/  ___// __ \ 
+  |    |   \  |   |  (  <_> )  |  /\___ \\  ___/ 
+  |______  /__|___|  /\____/|____//____  >\___  >
+         \/        \/                  \/     \/ 
+</pre>
