--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -1,11 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/bluegitf.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
 
   <body>
-    {{header}}
-    {{body}}
-    {{footer}}
+    <div class="page-div">
+      {{header}}
+      {{body}}
+      {{footer}}
+    </div>
   </body>
 </html>
