Add a link to the homepage

--- a/www/tpl/footer.html
+++ b/www/tpl/footer.html
@@ -2,5 +2,8 @@
 <div class="footer">
   <a href="http://www.gnu.org/licenses/agpl.html">
     <img src="/data/agplv3-88x31.png"/>
+  </a><br/>
+  <a href="https://github.com/abique/paste-binouse">
+    Get the source code!
   </a>
 </div>
