--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link href="/css/prettify.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="/js/prettify.js"></script>
   </head>
 
   <body>
