--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -1,6 +1,9 @@
 <div class="new-post-link">
   <a href="/">new post</a>
 </div>
-<pre class="viewer-pre">
+<pre class="prettyprint">
 {{content|h}}
 </pre>
+<script type="text/javascript">
+  window.prettyPrint();
+</script>
