--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -1,9 +1,17 @@
 <div class="new-post-link">
   <a href="/">new post</a>
 </div>
-<pre class="prettyprint">
-{{content|h}}
-</pre>
-<script type="text/javascript">
-  window.prettyPrint();
+<textarea id="code" class="CodeMirror-matchingbracket">{{content|h}}</textarea>
+
+<script language="javascript">
+  var myCodeMirror = CodeMirror.fromTextArea(
+   document.getElementById('code'), {
+    readOnly: true,
+    lineNumbers: true,
+    tabSize: 8,
+   });
 </script>
+
+<select name="type" id="mime-select" onChange="onMimeChanged()">
+</select>
+<script src="js/mime-list.js"></script>
