Add theming support

--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -55,6 +55,19 @@
     <script src="cm/mode/xquery/xquery.js"></script>
     <script src="cm/mode/yaml/yaml.js"></script>
 
+    <link rel="stylesheet" href="cm/theme/neat.css">
+    <link rel="stylesheet" href="cm/theme/elegant.css">
+    <link rel="stylesheet" href="cm/theme/erlang-dark.css">
+    <link rel="stylesheet" href="cm/theme/night.css">
+    <link rel="stylesheet" href="cm/theme/monokai.css">
+    <link rel="stylesheet" href="cm/theme/cobalt.css">
+    <link rel="stylesheet" href="cm/theme/eclipse.css">
+    <link rel="stylesheet" href="cm/theme/rubyblue.css">
+    <link rel="stylesheet" href="cm/theme/lesser-dark.css">
+    <link rel="stylesheet" href="cm/theme/xq-dark.css">
+    <link rel="stylesheet" href="cm/theme/ambiance.css">
+    <link rel="stylesheet" href="cm/theme/blackboard.css">
+    <link rel="stylesheet" href="cm/theme/vibrant-ink.css">
 
     <!-- paste binouse -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
