--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -15,8 +15,25 @@
 
 <select name="content-type" id="mime-select" onChange="onMimeChanged()">
 </select>
-<script src="js/mime-list.js"></script>
 
+<select id="theme-select">
+  <option>default</option>
+  <option>ambiance</option>
+  <option>blackboard</option>
+  <option>cobalt</option>
+  <option>eclipse</option>
+  <option>elegant</option>
+  <option>erlang-dark</option>
+  <option>lesser-dark</option>
+  <option>monokai</option>
+  <option>neat</option>
+  <option>night</option>
+  <option>rubyblue</option>
+  <option>vibrant-ink</option>
+  <option>xq-dark</option>
+</select>
+
+<script src="js/mime-list.js"></script>
 <script language="javascript">
 if ('{{content-type}}' != '') {
     document.getElementById('mime-select').value = '{{content-type}}';
