--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -74,7 +74,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="page-div">
       {{header}}
       {{body}}
       {{footer}}
