Port to new version of CodeMirror
* Fix js which enumerate supported mime types
* Update the list of themes and remove dead resources
* Fix css

--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -3,11 +3,11 @@
   <head>
     <!-- CodeMirror2 -->
     <link rel="stylesheet" href="cm/lib/codemirror.css">
-    <link rel="stylesheet" href="cm/lib/util/dialog.css">
+    <!-- <link rel="stylesheet" href="cm/lib/util/dialog.css"> -->
     <script src="cm/lib/codemirror.js"></script>
-    <script src="cm/lib/util/searchcursor.js"></script>
-    <script src="cm/lib/util/search.js"></script>
-    <script src="cm/lib/util/dialog.js"></script>
+    <!-- <script src="cm/lib/util/searchcursor.js"></script> -->
+    <!-- <script src="cm/lib/util/search.js"></script> -->
+    <!-- <script src="cm/lib/util/dialog.js"></script> -->
 
     <!-- CodeMirror modes -->
     <script src="cm/mode/clike/clike.js"></script>
@@ -56,19 +56,22 @@
     <script src="cm/mode/xquery/xquery.js"></script>
     <script src="cm/mode/yaml/yaml.js"></script>
 
-    <link rel="stylesheet" href="cm/theme/neat.css">
-    <link rel="stylesheet" href="cm/theme/elegant.css">
-    <link rel="stylesheet" href="cm/theme/erlang-dark.css">
-    <link rel="stylesheet" href="cm/theme/night.css">
-    <link rel="stylesheet" href="cm/theme/monokai.css">
+    <link rel="stylesheet" href="cm/theme/ambiance.css">
+    <link rel="stylesheet" href="cm/theme/ambiance-mobile.css">
+    <link rel="stylesheet" href="cm/theme/blackboard.css">
     <link rel="stylesheet" href="cm/theme/cobalt.css">
     <link rel="stylesheet" href="cm/theme/eclipse.css">
-    <link rel="stylesheet" href="cm/theme/rubyblue.css">
+    <link rel="stylesheet" href="cm/theme/elegant.css">
+    <link rel="stylesheet" href="cm/theme/erlang-dark.css">
     <link rel="stylesheet" href="cm/theme/lesser-dark.css">
-    <link rel="stylesheet" href="cm/theme/xq-dark.css">
-    <link rel="stylesheet" href="cm/theme/ambiance.css">
-    <link rel="stylesheet" href="cm/theme/blackboard.css">
+    <link rel="stylesheet" href="cm/theme/monokai.css">
+    <link rel="stylesheet" href="cm/theme/neat.css">
+    <link rel="stylesheet" href="cm/theme/night.css">
+    <link rel="stylesheet" href="cm/theme/rubyblue.css">
+    <link rel="stylesheet" href="cm/theme/solarized.css">
+    <link rel="stylesheet" href="cm/theme/twilight.css">
     <link rel="stylesheet" href="cm/theme/vibrant-ink.css">
+    <link rel="stylesheet" href="cm/theme/xq-dark.css">
 
     <!-- paste binouse -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
