--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -19,6 +19,7 @@
 <select id="theme-select">
   <option>default</option>
   <option>ambiance</option>
+  <option>ambiance-mobile</option>
   <option>blackboard</option>
   <option>cobalt</option>
   <option>eclipse</option>
@@ -29,6 +30,8 @@
   <option>neat</option>
   <option>night</option>
   <option>rubyblue</option>
+  <option>solarized</option>
+  <option>twilight</option>
   <option>vibrant-ink</option>
   <option>xq-dark</option>
 </select>
