--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -17,23 +17,33 @@
 </select>
 
 <select id="theme-select">
-  <option>default</option>
+  <option>3024-day</option>
+  <option>3024-night</option>
   <option>ambiance</option>
   <option>ambiance-mobile</option>
+  <option>base16-dark</option>
+  <option>base16-light</option>
   <option>blackboard</option>
   <option>cobalt</option>
   <option>eclipse</option>
   <option>elegant</option>
   <option>erlang-dark</option>
   <option>lesser-dark</option>
+  <option>mbo</option>
+  <option>midnight</option>
   <option>monokai</option>
   <option>neat</option>
   <option>night</option>
+  <option>paraiso-dark</option>
+  <option>paraiso-light</option>
   <option>rubyblue</option>
   <option>solarized</option>
+  <option>the-matrix</option>
+  <option>tomorrow-night-eighties</option>
   <option>twilight</option>
   <option>vibrant-ink</option>
   <option>xq-dark</option>
+  <option>xq-light</option>
 </select>
 
 <script src="js/mime-list.js"></script>
