use relative path for main css instead of absolute path.

--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -116,7 +116,7 @@
     <link rel="stylesheet" href="cm/theme/xq-light.css">
 
     <!-- paste binouse -->
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
   <body>
