update includes for codemirror 4.3.

--- a/www/tpl/page.html
+++ b/www/tpl/page.html
@@ -19,9 +19,12 @@
     <script src="cm/mode/coffeescript/coffeescript.js"></script>
     <script src="cm/mode/commonlisp/commonlisp.js"></script>
     <script src="cm/mode/css/css.js"></script>
+    <script src="cm/mode/cypher/cypher.js"></script>
     <script src="cm/mode/d/d.js"></script>
     <script src="cm/mode/diff/diff.js"></script>
+    <script src="cm/mode/django/django.js"></script>
     <script src="cm/mode/dtd/dtd.js"></script>
+    <script src="cm/mode/dylan/dylan.js"></script>
     <script src="cm/mode/ecl/ecl.js"></script>
     <script src="cm/mode/eiffel/eiffel.js"></script>
     <script src="cm/mode/erlang/erlang.js"></script>
@@ -41,14 +44,13 @@
     <script src="cm/mode/javascript/javascript.js"></script>
     <script src="cm/mode/jinja2/jinja2.js"></script>
     <script src="cm/mode/julia/julia.js"></script>
-    <script src="cm/mode/less/less.js"></script>
     <script src="cm/mode/livescript/livescript.js"></script>
     <script src="cm/mode/lua/lua.js"></script>
     <script src="cm/mode/markdown/markdown.js"></script>
     <script src="cm/mode/mirc/mirc.js"></script>
+    <script src="cm/mode/mllike/mllike.js"></script>
     <script src="cm/mode/nginx/nginx.js"></script>
     <script src="cm/mode/ntriples/ntriples.js"></script>
-    <script src="cm/mode/ocaml/ocaml.js"></script>
     <script src="cm/mode/octave/octave.js"></script>
     <script src="cm/mode/pascal/pascal.js"></script>
     <script src="cm/mode/pegjs/pegjs.js"></script>
@@ -56,8 +58,10 @@
     <script src="cm/mode/php/php.js"></script>
     <script src="cm/mode/pig/pig.js"></script>
     <script src="cm/mode/properties/properties.js"></script>
+    <script src="cm/mode/puppet/puppet.js"></script>
     <script src="cm/mode/python/python.js"></script>
     <script src="cm/mode/q/q.js"></script>
+    <script src="cm/mode/rpm/rpm.js"></script>
     <script src="cm/mode/r/r.js"></script>
     <script src="cm/mode/rst/rst.js"></script>
     <script src="cm/mode/ruby/ruby.js"></script>
@@ -69,6 +73,7 @@
     <script src="cm/mode/smalltalk/smalltalk.js"></script>
     <script src="cm/mode/smartymixed/smartymixed.js"></script>
     <script src="cm/mode/smarty/smarty.js"></script>
+    <script src="cm/mode/solr/solr.js"></script>
     <script src="cm/mode/sparql/sparql.js"></script>
     <script src="cm/mode/sql/sql.js"></script>
     <script src="cm/mode/stex/stex.js"></script>
@@ -100,12 +105,15 @@
     <link rel="stylesheet" href="cm/theme/erlang-dark.css">
     <link rel="stylesheet" href="cm/theme/lesser-dark.css">
     <link rel="stylesheet" href="cm/theme/mbo.css">
+    <link rel="stylesheet" href="cm/theme/mdn-like.css">
     <link rel="stylesheet" href="cm/theme/midnight.css">
     <link rel="stylesheet" href="cm/theme/monokai.css">
     <link rel="stylesheet" href="cm/theme/neat.css">
+    <link rel="stylesheet" href="cm/theme/neo.css">
     <link rel="stylesheet" href="cm/theme/night.css">
     <link rel="stylesheet" href="cm/theme/paraiso-dark.css">
     <link rel="stylesheet" href="cm/theme/paraiso-light.css">
+    <link rel="stylesheet" href="cm/theme/pastel-on-dark.css">
     <link rel="stylesheet" href="cm/theme/rubyblue.css">
     <link rel="stylesheet" href="cm/theme/solarized.css">
     <link rel="stylesheet" href="cm/theme/the-matrix.css">
