--- a/www/tpl/view.html
+++ b/www/tpl/view.html
@@ -1,5 +1,5 @@
 <div class="new-post-link">
-  <a href="/">new post</a>
+  <a href="./">new post</a>
 </div>
 <textarea id="code" class="CodeMirror-matchingbracket">{{content|h}}</textarea>
 
